--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 ul,li{
 	list-style: none;
 }
-.nav__bg {
+.nav-bg {
 	background-color: cadetblue;
 }
-.banner
+.bg-banner {
+	background-color: darkolivegreen;
+}
 
 .test{ 
 	background-color: blueviolet;
@@ -40,4 +42,9 @@ ul,li{
 	right: 0;
 	bottom: -4px;
 	transform: translatey(50%);
+}
+.img-test {
+	width: 285px;
+	height: 255px;
+	background-color: darkred;
 }
