--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,8 @@ ul,li{
 	height: 255px;
 	background-color: darkred;
 }
+.img-test2 {
+	width: 250px;
+	height: 125px;
+	background-color: rgb(70, 14, 190);
+}
