--- a/css/style.css
+++ b/css/style.css
@@ -23,15 +23,18 @@ ul,li{
 }
 .burger__wraper {
 	position: relative;
+	border: 1px solid rgb(255, 255, 255);
+	width: 30px;
+	height: 30px;
 }
 .burger {
 	width: 20px;
 	height: 3px;
 	background-color: rgb(95, 95, 95);
 	position: absolute;
-	right: 50%;
-	bottom: 50%;
-	transform: translatey(-50%);
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 }
 .burger::after {
 	content: "";
@@ -57,9 +60,12 @@ ul,li{
 	width: 285px;
 	height: 255px;
 	background-color: darkred;
+	max-width: 100%;
 }
 .img-test2 {
 	width: 250px;
 	height: 125px;
 	background-color: rgb(70, 14, 190);
+	max-width: 100%;
+
 }
